Items no longer wrap in category and item listing

--- a/web-root/index.css
+++ b/web-root/index.css
@@ -27,6 +27,8 @@ div.canvas {
 	div.canvas dl dd {
 		font-size: 18px;
 		padding: 8px 5px;
+		overflow: hidden;
+		white-space:nowrap;
 	}
 
 	div.canvas dl dd[state=selected] {
